# mcp-demo

./: .gitignore  .rgignore  Dockerfile  README.md  blacklisted_accounts.txt  manage.py  mcp_server.py  mcp_utils.py  pyproject.toml  seed_db.py  utils.py
bank_server/: asgi.py  settings.py  urls.py  wsgi.py
bank_server/bank_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
bank_server/bank_app/migrations/: 0001_initial.py
data/: accounts.json  persons.json  transactions.json
